# thempl

./: .gitignore  Cargo.toml  PKGBUILD  README.md
examples/: README.md
examples/.config/thempl/: defaults.yaml  ignores.yaml
examples/.config/thempl/templates/: .Xresources  alacritty.toml
examples/.config/thempl/templates/polybar/: config.ini
examples/.config/thempl/templates/waybar/: style.css
examples/.config/thempl/variable_sets/: dracula.yaml  light.yaml
src/: config.rs  diff.rs  filters.rs  ignores.rs  main.rs  renderer.rs  tui.rs  variables.rs
