[package]
name = "thempl"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
tera = "1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
similar = "2"
colored = "2"
home = "0.5"
walkdir = "2"
regex = "1"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
ratatui = "0.28"
crossterm = "0.28"
